2018-06-154  Richard Larsson  <ric.larsson@gmail.com>

	* arts-2-3-1078
	
	Updated to fixed Zeeman calculations.  Note that this intentionally
	breaks controlfiles.  Also note that Zeeman is now using the 
	line functions namespace, so cutoff and such must be defined in
	the line record
	
	* src/jacobian.cc:  Modified helper functions
	
	* src/methods.cc: Changed name of 
	propmat_clearskyAddZeemanFromPreCalc
	to propmat_clearskyAddZeeman
	
	* src/m_zeeman.cc:  Chnaged to use new method
	
	* src/propagationmatrix.cc,h: AddPolarized takes a
	Complex instead of a Numeric now
	
	* src/zeeman.cc,h:  Updated zeeman_on_the_fly.  It
	now works for all jacobians.  Compare with 
	xsec_species_line_mixing_wrapper_with_zeeman for complexity

	
2018-06-14  Richard Larsson  <ric.larsson@gmail.com>

	* arts-2-3-1077
	
	Second part of updating Zeeman calculations.  Contains
	the method of how the error became apparent...  Still no
	update to the actual computations. (Sorry for multiple 
	partial updates not leading anywhere; I found the 
	bug while travelling but I had to sit down by my desk
	for a few hours to find the cause)
	
	* src/jacobian.cc,h: introduced 
	is_magnetic_magnitude_parameter to contain all variables
	that needs the magnitude in jacobian.  This waste a few cycles 
	presently but will be necessary by next committ
	
	* src/linefunctions.cc:  Use is_magnetic_magnitude_parameter
	
	* src/zeeman.cc,h: Added future replacement function for 
	Zeeman internals and removed unused parameters

2018-06-14  Richard Larsson  <ric.larsson@gmail.com>

	* arts-2-3-1076
	
	Starting to fix a small bug in the Zeeman calculations.  It seems
	the eta angle was wrong for when theta angle was close to 90 degrees.
	This affects very special linear polarization calculations Luckily,
	none of the use-cases I have had for this has used the geometry in
	question, and the effect only redistributed some strength from 45 
	to main axis polarization.  Note that this code only adds the 